samples/_failures_safe/1761793866_8ac06d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9811f65d.c: In function ‘main’:
./samples/SAFE/__tmp_9811f65d.c:179:5: error: expected expression at end of input
  179 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_9811f65d.c:179:5: error: expected declaration or statement at end of input
